# leilao-cpp

./: .gitignore  CMakeLists.txt
src/main/: Avaliador.cpp  Avaliador.h  Lance.cpp  Lance.hpp  Leilao.cpp  Leilao.hpp  Main.cpp  Usuario.cpp  Usuario.hpp
src/test/: catch2.h  test-avalidor.cpp  test-leilao.cpp  test-user.cpp
